[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["learngitbasics <learngitbasics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.5"
pandas = "^1.5.3"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
